Bug 158500 - Style "Object with no fill and no line" is not translated
Summary: Style "Object with no fill and no line" is not translated
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Laurent Balland
URL:
Whiteboard: target:24.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2023-12-03 11:51 UTC by Laurent Balland
Modified: 2023-12-07 15:58 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Laurent Balland 2023-12-03 11:51:07 UTC
Description:
Default styles are automatically translated when opening the file in a different UI language, except "Object with no fill and no line" which is duplicated in English and in the new UI language.

Steps to Reproduce:
1. Set UI language to English (Tools > Options > Language Settings > Languages : User Interface = English
2. Create and save a new empty presentation
Drawing Styles are in English and Default Drawing Styles contains 2 styles: "Object with no fill and no line" and "Object without fill"
3. Change UI to another language, such as French
4. Restart now
5. Open previous presentation

Actual Results:
Drawing styles are now in French, but "Style de dessin par défaut" ("Default Drawing Styles") contains now 3 styles: "Object with no fill and no line", "Objet sans remplissage" ("Object without fill") and "Objet sans remplissage et sans ligne" ("Object with no fill and no line")

Expected Results:
There should be only the two translated styles: "Objet sans remplissage"  and "Objet sans remplissage et sans ligne"


Reproducible: Always


User Profile Reset: No

Additional Info:
It seems that "Object with no fill and no line" was forgotten in pApiNameMap
https://opengrok.libreoffice.org/xref/core/sd/source/core/stlsheet.cxx?r=e0c33ec1#616
Comment 1 Julien Nabet 2023-12-03 16:39:38 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 2 Commit Notification 2023-12-07 15:56:51 UTC
Laurent Balland committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0b504bb12e4d563d1505e9c2039cbbd723cf1162

tdf#158500 missing style Object with no fill no line

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.