tdf#158500 missing style Object with no fill no line

Style "Object with no fill no line" was not correctly treated during
automatic translation to UI language

Change-Id: I9364b25e326387110af81494d7fa5e4c05b5f972
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160262
Tested-by: Jenkins
Reviewed-by: Laurent Balland <laurent.balland@mailo.fr>